# deploydesk

./: .cnb.yml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deploy.yaml  package.json  pnpm-lock.yaml
.cnb/: tag_deploy.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  sync-cnb.yml
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.css  App.current.test.tsx  App.test.tsx  App.tsx  accessibility-styles.test.ts  api.test.ts  api.ts  main.test.tsx  main.tsx  startup-shell.test.ts  styles.css  types.ts  window-config.test.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  workspace.rs
apps/desktop/src/components/: AppShell.test.tsx  AppShell.tsx  ApplicationFrame.test.tsx  ApplicationFrame.tsx  Brand.tsx  ConfigurationCenter.test.tsx  ConfigurationCenter.tsx  ConnectionsPanel.test.tsx  ConnectionsPanel.tsx  DeploymentPathWorkspace.test.tsx  DeploymentPathWorkspace.tsx  DeploymentWorkflowCanvas.test.tsx  DeploymentWorkflowCanvas.tsx  EnvironmentEditor.test.tsx  EnvironmentEditor.tsx  ExistingDeploymentChoice.tsx  FlowGramRuntimeCompatibility.test.tsx  PlanPanel.test.tsx  PlanPanel.tsx  ProductWorkspace.test.tsx  ProductWorkspace.tsx  ProjectGallery.test.tsx  ProjectGallery.tsx  ProjectHome.test.tsx  ProjectHome.tsx  ProjectLoadingState.test.tsx  ProjectOverview.tsx  RuntimeConfigFields.test.tsx  RuntimeConfigFields.tsx  Sidebar.tsx  WelcomePanel.tsx  WorkspaceShell.test.tsx  WorkspaceShell.tsx
apps/desktop/src/components/onboarding/: CloudSetupAction.test.tsx  CloudSetupAction.tsx  ConnectionStep.tsx  DeploymentProgress.test.tsx  DeploymentProgress.tsx  InspectionStep.tsx  OnboardingLayout.tsx  RecommendationStep.tsx  RequirementsStep.test.tsx  RequirementsStep.tsx  ReviewStep.test.tsx  ReviewStep.tsx
apps/desktop/src/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  sheet.test.tsx  sheet.tsx  switch.tsx  tooltip.tsx
apps/desktop/src/lib/: errors.test.ts  errors.ts  projects.test.ts  projects.ts  release-model.test.ts  release-model.ts  release-task-copy.test.ts  release-task-copy.ts
apps/desktop/src/test/: setup.ts
apps/site/: Caddyfile  Dockerfile  index.html  package.json
apps/site/public/releases/: latest.json
apps/site/src/: main.js  styles.css
crates/deploy-core/: Cargo.toml
crates/deploy-core/src/: command.rs  error.rs  health.rs  journal.rs  lib.rs  manifest.rs  model.rs  plan.rs  preflight.rs  redact.rs  render.rs  scanner.rs
crates/deploy-core/src/providers/: caddy.rs  cnb.rs  docker.rs  mod.rs  pipeline.rs  registry.rs  ssh.rs
crates/deploy-core/tests/: ecat_fixture.rs  hello_example.rs
crates/deployctl/: Cargo.toml
crates/deployctl/src/: main.rs
docs/: README.md  architecture-decisions.md  architecture.md  competitive-workflow-review.md  configuration-and-runtime.md  deployment-model.md  ecat-verification.md  frontend-design-guidelines.md  implementation-acceptance.md  local-running.md  pilot-validation-2026-07-18.md  pilot-validation-finagent-2026-07-19.md  pilot-validation-finagentcrm-2026-07-19.md  product-contract.md  product-requirements.md  product-workflow.md  release.md  technical-capabilities.md  workflow-optimization-log.md
docs/archive/: README.md
docs/archive/2026-07-consolidated-guidance/: README.md  recommended-policy.md  user-journeys.md
docs/archive/2026-07-four-scene-model/: ARCHIVE-NOTE.md  README.md  architecture-decisions.md  product-requirements.md  product-workflow.md  recommended-policy.md  user-journeys.md
docs/archive/v1/: ecat-verification.md  error-codes.md  release.md
docs/archive/v2-prototype/: design-audit.md  prototype-spec.md  usability-test-plan.md  user-journeys.md
docs/archive/v2-prototype/prototype/: app.js
docs/product-prototype/: README.md  app.js  index.html  prototype.test.mjs  styles.css  workflow-node-config.css  workflow-node-config.html  workflow-node-config.js  workflow-node-config.test.mjs
docs/v2/: README.md  architecture-decisions.md  design-audit.md  product-requirements.md  prototype-spec.md  recommended-policy.md  usability-test-plan.md  user-journeys.md
docs/v2/prototype/: app.js  index.html  styles.css
examples/hello-fullstack/: .cnb.yml  .dockerignore  .env.example  .gitignore  README.md  deploy.yaml  package.json  pnpm-lock.yaml
examples/hello-fullstack/.deploydesk/: .gitignore
examples/hello-fullstack/.github/workflows/: sync-cnb.yml
examples/hello-fullstack/apps/api/: Dockerfile  package.json  tsconfig.json
examples/hello-fullstack/apps/api/src/: app.controller.ts  main.ts
examples/hello-fullstack/apps/web/: Dockerfile  index.html  package.json
examples/hello-fullstack/apps/web/src/: main.tsx  style.css
fixtures/ecat-energy/: .env.example  README.md  package.json
fixtures/ecat-energy/apps/admin/: package.json
fixtures/ecat-energy/apps/api/: package.json
fixtures/ecat-energy/apps/miniapp/: package.json
schemas/: deploy.schema.json
scripts/: build-macos-test-app.sh  build-release-manifest.mjs  build-release-manifest.test.mjs  publish-release-assets.sh  server-bootstrap.sh
