[package]
name = "deploy-core"
description = "Deterministic deployment planning and provider integrations for DeployDesk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
dirs.workspace = true
percent-encoding.workspace = true
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
zeroize.workspace = true

[lints]
workspace = true
