[package]
name = "deployctl"
description = "Headless CLI for DeployDesk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "deployctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
deploy-core = { path = "../deploy-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
